BREAKING : Update Dataprovider API and associated unit test for API V1, kick ack front
